Normalize settings and add WP Rocket REST allowlist

--- a/config/global-config.json
+++ b/config/global-config.json
@@ -1,5 +1,7 @@
 {
-  "rest_allowed_prefixes": [],
+  "rest_allowed_prefixes": [
+    "/wp-rocket/"
+  ],
   "http_allowed_hosts": [],
   "http_blocked_hosts": []
 }
